--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -24,11 +24,42 @@
       <import plugin="org.eclipse.datatools.connectivity.sqm.core"/>
       <import plugin="org.eclipse.datatools.connectivity.sqm.core.ui"/>
       <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
+      <import plugin="org.eclipse.datatools.connectivity"/>
       <import plugin="org.eclipse.datatools.connectivity.ui"/>
       <import plugin="org.eclipse.ui.navigator"/>
       <import plugin="com.ibm.icu"/>
    </requires>
 
+      <extension
+            point="org.eclipse.ui.navigator.navigatorContent">
+         <navigatorContent
+               contentProvider="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentProviderExtension"
+               id="org.eclipse.datatools.connectivity.db.sqlModelContent"
+               labelProvider="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelLabelProviderExtension"
+               name="SQL Model Content Extension">
+            <enablement>
+               <or>
+                  <and>
+                     <instanceof value="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+				     <test
+						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
+						value="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"/>
+                  </and>
+                  <instanceof value="org.eclipse.datatools.modelbase.sql.schema.SQLObject"/>
+                  <instanceof value="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.virtual.IVirtualNode"/>
+                  <instanceof value="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentExtension"/>
+               </or>
+            </enablement>
+         </navigatorContent>
+      </extension>
+      <extension
+            point="org.eclipse.ui.navigator.viewer">
+         <viewerContentBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
+            <includes>
+               <contentExtension pattern="org.eclipse.datatools.connectivity.db.sqlModelContent"/>
+            </includes>
+         </viewerContentBinding>
+      </extension>  
 
 
 </plugin>
