[125799] ODA Designer UI Framework's Extension Point - first iteration and adoption in exemplary ODA driver - oda.flatfile.ui

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.xml
@@ -19,5 +19,6 @@
       <import plugin="org.eclipse.datatools.connectivity.oda"/>
       <import plugin="org.eclipse.datatools.connectivity"/>
    </requires>
+   <extension-point id="dataSource" name="Open Data Access Designer UI Extension Point" schema="schema/datasource.exsd"/>
 
 </plugin>
