--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -15,14 +15,19 @@ oda.data.source.id=org.eclipse.datatools.connectivity.oda.flatfile
 oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 #
 ###############################################################################
-# NLS Strings
+# NLS messages
 #
 plugin.name=DTP ODA Flat File Designer
 oda.data.source.name=CSV Flat Files
-oda.parent.category.name=ODA Data Sources
 connection.profile.name=ODA Flat File Data Source Connection Profile
-oda.connection.factory.name=ODA Connection Factory
-ping.factory.name=Profile Ping Factory
 newwizard.name=ODA Flat File Data Source
 newwizard.description=Create an ODA Flat File connection profile
+wizard.window.title=New Flat File Data Source Profile
+wizard.data.source.page.title=Select Folder
 profile.propertypage.name=ODA Flat File Data Source Connection Properties
+#
+#  Below NLS messages apply to all ODA data sources; should be re-factored
+#
+oda.parent.category.name=ODA Data Sources
+oda.connection.factory.name=ODA Connection Factory
+ping.factory.name=Profile Ping Factory
