[125799] ODA Designer UI Framework's Extension Point - first iteration

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
@@ -1,7 +1,8 @@
 bin.includes = odadesignui.jar,\
                plugin.xml,\
                plugin*.properties,\
-               about.html
+               about.html,\
+               schema/datasource.exsd
 package.odadesignui.jar = ./org/eclipse/datatools/connectivity/oda/design/ui/
 src.dir =            	 ./src/
 odadesignui.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/ui/
