--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -12,10 +12,29 @@
  *  
  *************************************************************************
  *
- * $Id$
+ * $Id: build.properties,v 1.1 2005/12/29 04:17:56 lchan Exp $
  */
 -->
 bin.includes = plugin.xml,\
-               plugin.properties,\
-               odadesign.jar
+               plugin*.properties,\
+               odadesign.jar,\
+               about.html
 jars.compile.order = odadesign.jar
+package.odadesign.jar = ./org/eclipse/datatools/connectivity/oda/design/
+src.dir =            	 ./src/
+odadesign.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/
+bin.dir =         		 ./bin/
+jar.includes =           **/*.txt,\
+                         **/*.xml,\
+                         **/*.def,\
+                         **/*.properties
+javac.debug =            on
+javac.source =           1.4
+javac.target =           1.4
+build.result.dir =	 	 ./
+temp.dir =		         ./tempdir/
+plugin.destination =     ./
+javadoc.dir =            doc/api/
+download.dir =           ./download/
+plugin.version =         3.0.0
+custom = true
