--- a/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
@@ -11,7 +11,7 @@
  *  
  *************************************************************************
  *
- * $Id$
+ * $Id: plugin.properties,v 1.1 2005/12/29 04:17:56 lchan Exp $
  */
 
 # ====================================================================
@@ -27,5 +27,4 @@
 # ====================================================================
 
 pluginName = DTP ODA Design Session Model
-providerName = Eclipse.org
 
