--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
@@ -16,13 +16,15 @@
    <requires>
    	  <import plugin="org.eclipse.ui"/>
       <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.core.resources"/>
+      <import plugin="com.ibm.icu"/>
       <import plugin="org.eclipse.emf.ecore"/>
       <import plugin="org.eclipse.emf.ecore.xmi"/>
       <import plugin="org.eclipse.datatools.modelbase.sql"/>
-      <import plugin="org.eclipse.datatools.connectivity.sqm.core"/>
       <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="com.ibm.icu"/>
+      <import plugin="org.eclipse.datatools.connectivity.sqm.core"/>
+      <import plugin="org.eclipse.datatools.connectivity.ui"/>
+      <import plugin="org.eclipse.datatools.connectivity"/>
    </requires>
 
    <extension-point id="labelService" name="labelService" schema="schema/labelService.exsd"/>
@@ -301,4 +303,28 @@
 			displayType = "%cachedConnection">
 		</contributor>
 	</extension>
+ <extension
+       point="org.eclipse.ui.propertyPages">
+    <page
+          class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.SchemaFilterPropertyPage"
+          id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.SchemaFilterPropertyPage"
+          name="Schema Filter"
+          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+ </extension>
+ <extension
+       point="org.eclipse.ui.propertyPages">
+    <page
+          class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultTableFilterPropertyPage"
+          id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultTableFilterPropertyPage"
+          name="Default Table Filter"
+          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+ </extension>
+ <extension
+       point="org.eclipse.ui.propertyPages">
+    <page
+          class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultSPFilterPropertyPage"
+          id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultSPFilterPropertyPage"
+          name="Default Stored Procedure Filter"
+          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+ </extension>
 </plugin>
