*** empty log message ***

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.xml
@@ -82,6 +82,10 @@
 			<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
 			<include name="org.eclipse.datatools.connectivity.sqm.core/bin/*"/>
 			<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
+			<include name="org.eclipse.datatools.connectivity/bin/*"/>
+			<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
+			<include name="org.eclipse.datatools.connectivity.ui/bin/*"/>
+			<include name="org.eclipse.datatools.connectivity.ui/connectivityui.jar"/>
 		</fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
