[125476] Use ICU4J Classes

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
@@ -15,6 +15,7 @@
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.eclipse.datatools.connectivity.oda"/>
       <import plugin="org.junit" optional="true"/>
+      <import plugin="com.ibm.icu"/>
    </requires>
    
    <extension
