--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/plugin.xml
@@ -12,8 +12,8 @@
       </library>
    </runtime>
    <requires>
-      <import plugin="org.eclipse.datatools.connectivity"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda"/>
+      <import plugin="org.eclipse.datatools.connectivity" export="true"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda" export="true"/>
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.eclipse.ui"/>
       <import plugin="org.junit" optional="true"/>
