[126844] add support for filtering to catalog loaders.  made sure filter property pages are only exposed on connection profiles that support ConnectionInfo connections.

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
@@ -308,23 +308,34 @@
     <page
           class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.SchemaFilterPropertyPage"
           id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.SchemaFilterPropertyPage"
-          name="Schema Filter"
-          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile"/>
- </extension>
- <extension
-       point="org.eclipse.ui.propertyPages">
+          name="Default Schema Filter"
+          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
+      <filter
+            name="org.eclipse.datatools.connectivity.profile.property.factoryID"
+            value="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"/>
+    </page>
     <page
           class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultTableFilterPropertyPage"
           id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultTableFilterPropertyPage"
           name="Default Table Filter"
-          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile"/>
- </extension>
- <extension
-       point="org.eclipse.ui.propertyPages">
+          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
+      <filter
+            name="org.eclipse.datatools.connectivity.profile.property.factoryID"
+            value="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"/>
+    </page>
     <page
           class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultSPFilterPropertyPage"
           id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.DefaultSPFilterPropertyPage"
           name="Default Stored Procedure Filter"
-          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+          objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
+      <filter
+            name="org.eclipse.datatools.connectivity.profile.property.factoryID"
+            value="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"/>
+    </page>
+    <page
+          class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.FilterNodeFilterPropertyPage"
+          id="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.FilterNodeFilterPropertyPage"
+          name="Filter Settings"
+          objectClass="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.filter.IFilterNode"/>
  </extension>
 </plugin>
